--- a/public/css/index_shop.css
+++ b/public/css/index_shop.css
@@ -126,6 +126,10 @@ body {
   float: right;
   margin-top: 100px;
   margin-bottom: 100px; }
+  @media all and (max-device-width: 480px) {
+    .carousel_container {
+      float: none;
+      width: 100%; } }
 
 .carousel_title {
   width: auto;
@@ -154,12 +158,24 @@ body {
 .articles {
   width: 100%;
   height: 80px; }
+  @media all and (max-device-width: 480px) {
+    .articles {
+      float: none;
+      height: 100%;
+      margin-bottom: 180px; } }
 
 .container_articles {
   width: 85%;
-  height: 600px;
   float: right;
-  margin-bottom: 1000px; }
+  margin-bottom: 80px; }
+  @media screen and (max-width: 800px) {
+    .container_articles {
+      margin-bottom: auto; } }
+  @media all and (max-device-width: 480px) {
+    .container_articles {
+      width: 100%;
+      float: none;
+      margin-bottom: 180px; } }
 
 .articles_title_container {
   width: 500px;
@@ -191,6 +207,22 @@ body {
   cursor: pointer;
   overflow: hidden; }
 
+.article:hover .article_icon {
+  transform: translateY(0); }
+
+.article_icon {
+  z-index: 10;
+  color: #ffffff;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease-in-out;
+  height: 100%;
+  width: 100%;
+  font-size: 70px;
+  transform: translateY(100%); }
+
 @media only screen and (max-width: 1200px) {
   .articles_items {
     justify-content: center; }
@@ -200,22 +232,6 @@ body {
     margin-bottom: 20px;
     margin-left: 20px;
     margin-right: 20px; }
-
-  .article:hover .article_icon {
-    transform: translateY(0); }
-
-  .article_icon {
-    z-index: 1;
-    color: #ffffff;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.4s ease-in-out;
-    height: 100%;
-    width: 100%;
-    font-size: 70px;
-    transform: translateY(100%); }
 
   /* ARTICLES */ }
 
