--- a/resources/sass/index_shop.scss
+++ b/resources/sass/index_shop.scss
@@ -31,6 +31,12 @@
     float: right;
     margin-top: 100px;
     margin-bottom: 100px;
+
+    @media all and (max-device-width: 480px)
+    {
+      float: none;
+      width: 100%;
+    }
  }
 
  .carousel_title {
@@ -66,13 +72,30 @@
  .articles {
    width: 100%;
    height: 80px;
+   @media all and (max-device-width: 480px)
+   {
+     float: none;
+     height: 100%;
+     margin-bottom: 180px;
+   }
  }
 
  .container_articles {
    width: 85%;
-   height: 600px;
    float: right;
-   margin-bottom: 1000px;
+   margin-bottom: 80px;
+
+   @media screen and (max-width:800px)
+   {
+     margin-bottom: auto;
+   }
+
+   @media all and (max-device-width: 480px)
+   {
+     width:100%;
+     float: none;
+     margin-bottom: 180px;
+   }
 
  }
 
@@ -109,6 +132,24 @@
    overflow: hidden;
  }
 
+ .article:hover .article_icon {
+  transform: translateY(0)
+}
+
+ .article_icon{
+  z-index: 10;
+  color: #ffffff;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease-in-out;
+  height: 100%;
+  width: 100%;
+  font-size: 70px;
+  transform: translateY(100%);
+}
+
  @media only screen and (max-width: 1200px) {
 
    .articles_items {
@@ -122,21 +163,4 @@
       margin-right: 20px;
    }
 
-   .article:hover .article_icon {
-      transform: translateY(0);
-  }
-
-  .article_icon{
-   z-index: 1;
-   color: #ffffff;
-   display: flex;
-   position: relative;
-   justify-content: center;
-   align-items: center;
-   transition: all 0.4s ease-in-out;
-   height: 100%;
-   width: 100%;
-   font-size: 70px;
-   transform: translateY(100%);
- }
  /* ARTICLES */}
