--- a/public/css/nav_bar.css
+++ b/public/css/nav_bar.css
@@ -165,6 +165,9 @@ footer {
   transition: 0.2s ease-in-out;
   border-color: white; }
 
+*:hover {
+  color: #FFFFFF; }
+
 .m-link i {
   margin-right: 5px; }
 
