--- a/public/css/index.css
+++ b/public/css/index.css
@@ -113,17 +113,80 @@ body {
 .create:hover {
   background-color: #FFC252; }
 
-.search-bar {
+.block-search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.autocomplete {
+  /*the container must be positioned relative:*/
+  position: relative;
   display: inline-block; }
 
-#result-search {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  background-color: #FFFFFF; }
+input {
+  border: 1px solid transparent;
+  background-color: #FFFFFF;
+  padding: 10px;
+  font-size: 16px;
+  box-sizing: border-box; }
 
-.search-bar:active #result-search {
-  background-color: #000000; }
+input[type=text] {
+  background-color: #FFFFFF;
+  width: 100%; }
+
+input[type=submit] {
+  background-color: #5D89DA;
+  color: #FFFFFF; }
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  top: 100%;
+  left: 0;
+  right: 0; }
+  @media screen and (max-width: 1000px) {
+    .autocomplete-items {
+      top: 85%; } }
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #FFFFFF;
+  border-bottom: 1px solid #d4d4d4; }
+  @media screen and (max-width: 400px) {
+    .autocomplete-items div {
+      padding: 5px; } }
+
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; }
+
+.autocomplete-active {
+  background-color: #5D89DA !important;
+  color: #FFFFFF; }
+
+.sort {
+  margin-top: 50px;
+  display: flexbox;
+  flex-direction: column;
+  justify-content: center; }
+
+.title-sort {
+  font-size: 10pt;
+  color: #FFFFFF;
+  text-align: left;
+  font-weight: normal;
+  width: 100px; }
+
+.list-sort {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.validate {
+  width: 100px; }
 
 .events {
   margin-left: 15%;
