--- a/public/css/index_shop.css
+++ b/public/css/index_shop.css
@@ -104,6 +104,10 @@ body {
 .create:hover {
   background-color: #FFC252; }
 
+.masked {
+  text-align: center;
+  color: red; }
+
 .welcome_t {
   background-color: #5D89DA;
   color: #FFFFFF;
